loss initial import adjusts

--- a/work2.ipynb
+++ b/work2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "!pip install torchinfo kornia lpips"
+    "%pip install torchinfo kornia lpips"
    ]
   },
   {
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "tinf.summary?"
+    "# tinf.summary?"
    ]
   },
   {
@@ -408,7 +408,7 @@
     }
    ],
    "source": [
-    "tinf.summary?"
+    "# tinf.summary?"
    ]
   },
   {
@@ -678,15 +678,15 @@
     }
    ],
    "source": [
-    "try:\n",
-    "        y = model(torch.randn(1, in_channels, 256, 256).to(device))\n",
-    "        tv.make_dot(y, params=dict(list(model.named_parameters()))).render(\"unet_architecture\", format=\"png\")\n",
+    "# try:\n",
+    "#         y = model(torch.randn(1, in_channels, 256, 256).to(device))\n",
+    "#         tv.make_dot(y, params=dict(list(model.named_parameters()))).render(\"unet_architecture\", format=\"png\")\n",
     "        \n",
-    "        #plot.format = 'png'\n",
+    "#         #plot.format = 'png'\n",
     "        \n",
-    "        print(\"Arquitetura da U-Net plotada com sucesso.\")\n",
-    "except ImportError:\n",
-    "        print(\"Para plotar a arquitetura, instale o pacote torchviz.\")\n"
+    "#         print(\"Arquitetura da U-Net plotada com sucesso.\")\n",
+    "# except ImportError:\n",
+    "#         print(\"Para plotar a arquitetura, instale o pacote torchviz.\")\n"
    ]
   },
   {
@@ -714,7 +714,7 @@
     }
    ],
    "source": [
-    "summary(model, x,depth=1, dtypes=[torch.long],branching=False,verbose=1, col_width=16)"
+    "# summary(model, x,depth=1, dtypes=[torch.long],branching=False,verbose=1, col_width=16)"
    ]
   },
   {
@@ -868,14 +868,14 @@
    "outputs": [],
    "source": [
     "\n",
-    "# Plotando a arquitetura da rede\n",
-    "try:\n",
+    "# # Plotando a arquitetura da rede\n",
+    "# try:\n",
     "\n",
-    "    y = model(torch.randn(1, in_channels, 256, 256).to(device))\n",
-    "    tv.make_dot(y, params=dict(list(model.named_parameters()))).render(\"unet_architecture_2\", format=\"png\")\n",
-    "    print(\"Arquitetura da U-Net plotada com sucesso.\")\n",
-    "except ImportError:\n",
-    "    print(\"Para plotar a arquitetura, instale o pacote torchviz.\")\n"
+    "#     y = model(torch.randn(1, in_channels, 256, 256).to(device))\n",
+    "#     tv.make_dot(y, params=dict(list(model.named_parameters()))).render(\"unet_architecture_2\", format=\"png\")\n",
+    "#     print(\"Arquitetura da U-Net plotada com sucesso.\")\n",
+    "# except ImportError:\n",
+    "#     print(\"Para plotar a arquitetura, instale o pacote torchviz.\")\n"
    ]
   },
   {
@@ -1488,15 +1488,15 @@
     }
    ],
    "source": [
-    "# Plotando a arquitetura da rede\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "try:\n",
+    "# # Plotando a arquitetura da rede\n",
+    "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# try:\n",
     "\n",
-    "    y = model(torch.randn(1, 3, 256, 256).to(device))\n",
-    "    tv.make_dot(y, params=dict(list(model.named_parameters()))).render(\"vit_architecture\", format=\"png\")\n",
-    "    print(\"Arquitetura da U-Net plotada com sucesso.\")\n",
-    "except ImportError:\n",
-    "    print(\"Para plotar a arquitetura, instale o pacote torchviz.\")\n"
+    "#     y = model(torch.randn(1, 3, 256, 256).to(device))\n",
+    "#     tv.make_dot(y, params=dict(list(model.named_parameters()))).render(\"vit_architecture\", format=\"png\")\n",
+    "#     print(\"Arquitetura da U-Net plotada com sucesso.\")\n",
+    "# except ImportError:\n",
+    "#     print(\"Para plotar a arquitetura, instale o pacote torchviz.\")\n"
    ]
   },
   {
@@ -3001,8 +3001,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gradient Loss: 0.7968171238899231\n",
-      "Time taken: 0.002445 seconds\n"
+      "Gradient Loss: 0.0\n",
+      "Time taken: 0.003594 seconds\n"
      ]
     }
    ],
@@ -3077,7 +3077,7 @@
     "    \n",
     "    # Measure the time taken to compute the loss\n",
     "    start_time = time.time()\n",
-    "    loss_value = gradient_loss(input_tensor, target_tensor)\n",
+    "    loss_value = gradient_loss(input_tensor, input_tensor)\n",
     "    end_time = time.time()\n",
     "    \n",
     "    print(f\"Gradient Loss: {loss_value.item()}\")\n",
