--- a/work2.ipynb
+++ b/work2.ipynb
@@ -1444,9 +1444,6 @@
     "#     transforms.ToTensor()\n",
     "# ])\n",
     "\n",
-    "dataset = DummyDataset()\n",
-    "dataloader = DataLoader(dataset, batch_size=8, shuffle=True)\n",
-    "\n",
     "model = ImageEnhancerTransformer()\n",
     "# Gera um tensor aleatório como entrada\n",
     "input_tensor = torch.rand(1, 3, 256, 256)  # Batch size de 1, 3 canais, 256x256 de resolução\n",
@@ -1458,7 +1455,7 @@
     "print(\"Forma do tensor de entrada:\", input_tensor.shape)\n",
     "print(\"Forma do tensor de saída:\", output_tensor.shape)\n",
     "\n",
-    "tinf.summary(model, (1,3, 256, 256),depth=3)\n",
+    "tinf.summary(model, (1, 3, 256, 256),depth=3)\n",
     "# criterion = nn.MSELoss()\n",
     "# optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)\n",
     "\n",
