--- a/train.ipynb
+++ b/train.ipynb
@@ -31,28 +31,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "vgg11\n",
-      "vgg16\n",
-      "vgg19\n",
-      "alex\n",
-      "squeeze\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "IMAGENET1K",
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
       "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mloss\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;132;01m{\u001b[39;00m\u001b[43mbuild_perceptual_losses\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;132;01m{\u001b[39;00mbuild_channel_losses()\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;132;01m{\u001b[39;00mbuild_structural_losses()\u001b[38;5;132;01m}\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Documentos/Loss_battle/loss/__init__.py:13\u001b[0m, in \u001b[0;36mbuild_perceptual_losses\u001b[0;34m(perceptual_loss)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m loss \u001b[38;5;129;01min\u001b[39;00m perceptual_loss:\n\u001b[1;32m     12\u001b[0m    \u001b[38;5;28mprint\u001b[39m(loss)\n\u001b[0;32m---> 13\u001b[0m    PerceptualLosses\u001b[38;5;241m.\u001b[39mappend(\u001b[43mPerceptualLoss\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mloss\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     14\u001b[0m    \u001b[38;5;28mid\u001b[39m \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m PerceptualLosses\n",
-      "File \u001b[0;32m~/Documentos/Loss_battle/loss/perceptualLoss.py:45\u001b[0m, in \u001b[0;36mPerceptualLoss.__init__\u001b[0;34m(self, id, model, layer_indices)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mperceptual \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39mvgg19_bn(weights\u001b[38;5;241m=\u001b[39mmodels\u001b[38;5;241m.\u001b[39mVGG19_BN_Weights\u001b[38;5;241m.\u001b[39mIMAGENET1K_V1)\u001b[38;5;241m.\u001b[39mfeatures\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m model \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msqueeze\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m---> 45\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mperceptual \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39msqueezenet1_1(weights\u001b[38;5;241m=\u001b[39m\u001b[43mmodels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mSqueezeNet1_1_Weights\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mIMAGENET1K\u001b[49m)\u001b[38;5;241m.\u001b[39mfeatures\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m model \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124malex\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m     47\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mperceptual \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39malexnet(weights \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39mAlexNet_Weights\u001b[38;5;241m.\u001b[39mIMAGENET1K_V1)\u001b[38;5;241m.\u001b[39mfeatures\n",
-      "File \u001b[0;32m~/anaconda3/envs/losstest/lib/python3.11/enum.py:784\u001b[0m, in \u001b[0;36mEnumType.__getattr__\u001b[0;34m(cls, name)\u001b[0m\n\u001b[1;32m    782\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m.\u001b[39m_member_map_[name]\n\u001b[1;32m    783\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m:\n\u001b[0;32m--> 784\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(name) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: IMAGENET1K"
+      "File \u001b[0;32m~/Documentos/Loss_battle/loss/__init__.py:12\u001b[0m, in \u001b[0;36mbuild_perceptual_losses\u001b[0;34m(perceptual_loss)\u001b[0m\n\u001b[1;32m     10\u001b[0m PerceptualLosses \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mid\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m loss \u001b[38;5;129;01min\u001b[39;00m \u001b[43mtqdm\u001b[49m\u001b[43m(\u001b[49m\u001b[43mperceptual_loss\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     13\u001b[0m    PerceptualLosses\u001b[38;5;241m.\u001b[39mappend(PerceptualLoss(model\u001b[38;5;241m=\u001b[39mloss, \u001b[38;5;28mid\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mid\u001b[39m))\n\u001b[1;32m     14\u001b[0m    \u001b[38;5;28mid\u001b[39m \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
      ]
     }
    ],
