--- a/competicao.ipynb
+++ b/competicao.ipynb
@@ -192,6 +192,12 @@
     "import torch.optim as optim\n",
     "from torch.nn.parallel import DistributedDataParallel as DDP\n",
     "from torch.utils.data import DataLoader, DistributedSampler, TensorDataset\n",
+    "from loss import *\n",
+    "import torch\n",
+    "from models import *\n",
+    "from src.dataload import *\n",
+    "from tqdm.notebook import tqdm\n",
+    "from metrics.metrics import *\n",
     "\n",
     "def setup(rank, world_size):\n",
     "    dist.init_process_group(\"nccl\", rank=rank, world_size=world_size)\n",
@@ -248,7 +254,6 @@
     "        with torch.no_grad():\n",
     "            for batch_idx, (data, target) in enumerate(test_loader_UIEB):\n",
     "                data, target = data.cuda(rank), target.cuda(rank)\n",
-    "                output = model(data)\n",
     "                #calcula a metrica\n",
     "                targets = target.cpu().numpy()\n",
     "                predictions = model(data.cuda(rank)).cpu().numpy()\n",
@@ -303,12 +308,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rodar no cluster"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!torchrun --nnodes=2 --nproc_per_node=2 --node_rank=0 --master_addr=\"192.168.1.1\" --master_port=12355 train_ddp.py --nodes=2 --gpus=2 --epochs=100\n"
+    "!torchrun --nnodes=2 --nproc_per_node=2 --node_rank=0 --master_addr=\"10.228.252.209\" --master_port=12355 main.py --nodes=2 --gpus=2 --epochs=100\n"
    ]
   }
  ],
